# bdd

./: .env  README.md  pyproject.toml
app/: Dockerfile  README.md  index.html  script.js  styles.css
features/: Login.feature  README.md  environment.py
features/fixture/: browser.py  demo_fixture.py
features/steps/: login_steps.py
reports/: b5d86b97-a2c4-4994-a837-f3196366596b-result.json  f4d829f1-009b-4305-92c9-7de8b754c417-result.json
