[tool.poetry]
name = "bdd"
version = "0.1.0"
description = "Presentation for BDD"
authors = ["thamodrensinniah <thamodren.sinniah@duerrdental.com>"]

[tool.poetry.dependencies]
python = "^3.12"
behave = "1.2.6"
selenium = "4.18.1"
python-dotenv = "^1.0.1"
webdriver-manager = "^4.0.1"
allure-behave = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
